# ascii-knight

./: CMakeLists.txt
include/: console.h  mathf.h  vectors.h
src/: console.c  main.c  main.cpp  mathf.c  vectors.c
